结合自定义指令，实现了功能点的权限控制